--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "jsx": "react",
     "declaration": true,
     "moduleResolution": "node",
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
